--- a/UP-HTML-Course/LAB05 JSClientSide/stickynote_form/index.html
+++ b/UP-HTML-Course/LAB05 JSClientSide/stickynote_form/index.html
@@ -94,7 +94,7 @@
     </div>
     </div>
     <script src="script.js"></script>
-    <!-- <script src="promptname.js"></script> -->
+    <script src="promptname.js"></script>
     <script src="forms.js"></script>
 </body>
 </html>
